# Copyright (C) 2000-2006 MySQL AB
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Library General Public
# License as published by the Free Software Foundation; version 2
# of the License.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Library General Public License for more details.
#
# You should have received a copy of the GNU Library General Public
# License along with this library; if not, write to the Free
# Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
# MA 02111-1307, USA


BUILT_SOURCES =		drizzle_version.h \
			mysqld_ername.h \
			mysqld_error.h \
			sql_state.h

HEADERS_ABI =		drizzle.h \
			drizzle_com.h \
			drizzle_time.h \
			my_list.h \
			my_alloc.h \
			typelib.h \
			drizzle/plugin.h \
			drizzle/plugin_audit.h

pkginclude_HEADERS =	$(HEADERS_ABI) \
			m_string.h \
			my_sys.h \
			my_xml.h \
			my_pthread.h \
			decimal.h \
			errmsg.h \
			my_global.h \
			my_net.h \
			my_getopt.h \
			my_dir.h \
			sql_common.h \
			keycache.h \
			m_ctype.h \
			my_attribute.h \
			$(BUILT_SOURCES)

noinst_HEADERS =	my_bit.h \
			heap.h \
			my_bitmap.h \
			my_uctype.h \
			myisam.h \
			myisampack.h \
			myisammrg.h \
			mysys_err.h \
			my_base.h \
			help_start.h \
			help_end.h \
			my_nosys.h \
			queues.h \
			sha1.h \
			sha2.h \
			my_tree.h \
			my_trie.h \
			hash.h \
			thr_alarm.h \
			thr_lock.h \
			t_ctype.h \
			violite.h \
			my_md5.h \
			base64.h \
			drizzle_version.h.in \
			my_handler.h \
			my_time.h \
			drizzle/server/field/blob.h \
			drizzle/server/field/date.h \
			drizzle/server/field/datetime.h \
			drizzle/server/field/decimal.h \
			drizzle/server/field/double.h \
			drizzle/server/field/int64_t.h \
			drizzle/server/field/long.h \
			drizzle/server/field/null.h \
			drizzle/server/field/set.h \
			drizzle/server/field/short.h \
			drizzle/server/field/string.h \
			drizzle/server/field/timestamp.h \
			drizzle/server/field/timetype.h \
			drizzle/server/field/varstring.h \
			drizzle/server/field/year.h

AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include \
              -I$(top_srcdir)/server

LDADD = $(top_builddir)/mysys/libmysyslt.la \
        $(top_builddir)/strings/libmystringslt.la $(ZLIB_LIBS)

EXTRA_PROGRAMS = comp_err

# This will build mysqld_error.h, mysqld_ername.h and sql_state.h
# NOTE Built files should depend on their sources to avoid
# the built files being rebuilt in source dist
mysqld_error.h: comp_err$(EXEEXT) $(top_srcdir)/server/share/errmsg.txt
	$(top_builddir)/include/comp_err$(EXEEXT) \
	--charset=$(top_srcdir)/server/share/charsets \
	--out-dir=$(top_builddir)/server/share/ \
	--header_file=$(top_builddir)/include/mysqld_error.h \
	--name_file=$(top_builddir)/include/mysqld_ername.h \
	--state_file=$(top_builddir)/include/sql_state.h \
	--in_file=$(top_srcdir)/server/share/errmsg.txt

mysqld_ername.h: mysqld_error.h
sql_state.h: mysqld_error.h

# Remove built files and the symlinked directories
CLEANFILES = 		$(BUILT_SOURCES)

EXTRA_DIST = 		drizzle_h.ic

# Some include files that may be moved and patched by configure
DISTCLEANFILES =	sched.h \
			$(CLEANFILES)

# These files should not be included in distributions since they are
# generated by configure from the .h.in files
dist-hook:
	$(RM) -f $(distdir)/drizzle_version.h 

#
# Rules for checking that ABI has not changed
#

# Create a icheck file and compare it to the reference
abi_check:	$(HEADERS_ABI) drizzle_version.h mysql_h.ic
	@set -ex; \
	if test "x@ICHECK@" != "xno"  ; then \
		@ICHECK@ --canonify --skip-from-re /usr/ -o $@ $(HEADERS_ABI); \
		@ICHECK@ --compare drizzle_h.ic $@; \
	fi; \
	touch abi_check;

