# Copyright (C) 2000-2006 MySQL AB
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Library General Public
# License as published by the Free Software Foundation; version 2
# of the License.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Library General Public License for more details.
#
# You should have received a copy of the GNU Library General Public
# License along with this library; if not, write to the Free
# Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
# MA 02111-1307, USA


BUILT_SOURCES =		drizzle_version.h \
			drizzled_ername.h \
			drizzled_error.h \
			sql_state.h

HEADERS_ABI =		drizzle_time.h \
			my_list.h \
			typelib.h

pkginclude_HEADERS =	$(HEADERS_ABI) \
			errmsg.h \
			my_global.h \
			my_net.h \
			my_dir.h \
			sql_common.h \
			my_attribute.h \
			$(BUILT_SOURCES)

noinst_HEADERS =	my_bit.h \
			my_base.h \
			drizzle_version.h.in \
			my_handler.h \
			my_time.h

LDADD = $(top_builddir)/mysys/libmysyslt.la \
        $(top_builddir)/mystrings/libmystringslt.la $(ZLIB_LIBS)

EXTRA_PROGRAMS = comp_err
comperr_CFLAGS = -I${top_srcdir}/drizzled

# This will build drizzled_error.h, drizzled_ername.h and sql_state.h
# NOTE Built files should depend on their sources to avoid
# the built files being rebuilt in source dist
drizzled_error.h: comp_err$(EXEEXT) $(top_srcdir)/drizzled/share/errmsg.txt
	$(top_builddir)/include/comp_err$(EXEEXT) \
	--charset=$(top_srcdir)/drizzled/share/charsets \
	--out-dir=$(top_builddir)/drizzled/share/ \
	--header_file=$(top_builddir)/include/drizzled_error.h \
	--name_file=$(top_builddir)/include/drizzled_ername.h \
	--state_file=$(top_builddir)/include/sql_state.h \
	--in_file=$(top_srcdir)/drizzled/share/errmsg.txt

drizzled_ername.h: drizzled_error.h
sql_state.h: drizzled_error.h

# Remove built files and the symlinked directories
CLEANFILES = 		$(BUILT_SOURCES)

EXTRA_DIST = 		drizzle_h.ic

# Some include files that may be moved and patched by configure
DISTCLEANFILES =	sched.h \
			$(CLEANFILES)

# These files should not be included in distributions since they are
# generated by configure from the .h.in files
dist-hook:
	$(RM) -f $(distdir)/drizzle_version.h 

#
# Rules for checking that ABI has not changed
#

# Create a icheck file and compare it to the reference
abi_check:	$(HEADERS_ABI) drizzle_version.h mysql_h.ic
	@set -ex; \
	if test "x@ICHECK@" != "xno"  ; then \
		@ICHECK@ --canonify --skip-from-re /usr/ -o $@ $(HEADERS_ABI); \
		@ICHECK@ --compare drizzle_h.ic $@; \
	fi; \
	touch abi_check;

